--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@tailwindcss/vite": "^4.1.6",
     "aos": "^2.3.4",
     "tailwindcss": "^4.1.6",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-leaflet": "^1.0.50"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "leaflet": "^1.9.4",
     "vite": "^6.3.5"
   }
 }
