--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "@vueuse/sound": "^2.1.3",
     "aos": "^2.3.4",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
